--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,10 @@ python-docx==0.8.11
 openpyxl==3.1.0
 numpy==1.24.0
 PyPDF2==3.0.0
+pdfplumber==0.9.0
 nltk==3.8.0
 sentence-transformers==2.2.0
+requests==2.31.0
+beautifulsoup4==4.12.0
+lxml==4.9.0
+urllib3==1.26.0
