--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,17 @@ torch==2.1.0
 scikit-learn==1.3.0
 matplotlib==3.7.0
 seaborn==0.12.0
-python-docx==0.8.11
+python-docx==1.2.0
 openpyxl==3.1.0
 numpy==1.24.0
-PyPDF2==3.0.0
-pdfplumber==0.9.0
+PyPDF2==3.0.1
+pdfplumber==0.11.7
 nltk==3.8.0
 sentence-transformers==2.2.0
 requests==2.31.0
 beautifulsoup4==4.12.0
 lxml==4.9.0
 urllib3==1.26.0
+tenacity==8.5.0
+openai==1.93.2
+tqdm==4.67.1
